fix: Fix sticky card dismiss button alignment

--- a/src/styles/components/chat/_chat-prompt-wrapper.scss
+++ b/src/styles/components/chat/_chat-prompt-wrapper.scss
@@ -433,6 +433,17 @@
             border-bottom-left-radius: 0 !important;
             border: none;
             box-shadow: none;
+
+            > .mynah-chat-item-card-title {
+                position: absolute;
+                right: 0;
+                top: 0;
+                z-index: var(--mynah-z-2);
+
+                > .mynah-chat-item-card-title-text {
+                    display: none;
+                }
+            }
         }
     }
 }
